--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 <input type="number" id="m2" name="m2"><br><br>
                 <select name="subject3" id="subject3">
                     <option value="english">english</option>
-                    <option value="SST">SST</option>
+                    <option value="SST"> SST </option>
                     <option value="science">science</option>
-                    <input type="number" id="m3" name="m3"><br><br>
+                    <input type="number" id="m3" name="m3"></select><br><br>
                     average :<output name="x" for="m1 m2 m3">
                     </output><br><br>
                     <input type="submit">
